add readme, gitignore, data folder \n update distance calculation and station info construct

--- a/Gogoro_Routing.ipynb
+++ b/Gogoro_Routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,173 +12,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "utf-8\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function BufferedWriter.close>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 66,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "data_url='https://wapi.gogoro.com/tw/api/vm/list'\n",
-    "r = requests.get(data_url,stream = True) #stream=True #開啟時時續續的下載的方式\n",
-    "r.encoding = 'utf-8'\n",
-    "print(r.encoding)\n",
-    "with open('./data.txt','wb') as f: \n",
-    "    for chunk in r.iter_content(chunk_size=32): #chunk_size #設定每次下載檔案的大小\n",
-    "        f.write(chunk)  #每一次迴圈儲存一次下載下來的內容\n",
-    "f.close"
+    "# not working since api url is currently unavailable\n",
+    "# data_url='https://wapi.gogoro.com/tw/api/vm/list'\n",
+    "# r = requests.get(data_url,stream = True) #stream=True #開啟時時續續的下載的方式\n",
+    "# r.encoding = 'utf-8'\n",
+    "# print(r.encoding)\n",
+    "# with open('./data.txt','wb') as f: \n",
+    "#     for chunk in r.iter_content(chunk_size=32): #chunk_size #設定每次下載檔案的大小\n",
+    "#         f.write(chunk)  #每一次迴圈儲存一次下載下來的內容\n",
+    "# f.close"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import os\n",
+    "# import sys\n",
+    "# import fileinput\n",
+    "# f1 = open('./data.txt', 'r')\n",
+    "# f2 = open('./new_data.txt', 'w')\n",
+    "# for line in f1:\n",
+    "#     f2.write(line.replace(\"\\\\\", 'new_text'))\n",
+    "# f1.close()\n",
+    "# f2.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Address              { List : [{ Value :  No. 478, Guangfu Rd., Huw...\nAvailableTime                                                     24HR\nAvailableTimeByte                                                 None\nCity                 { List :[{ Value : Yunlin County , Lang : en-U...\nDistrict             { List : [{ Value :  Huwei Township , Lang :  ...\nLatitude                                                       23.7112\nLocName              { List : [{ Value :  Gogoro Huwei Guangfu RS C...\nLongitude                                                      120.434\nState                                                                1\nZipCode                                                          63244\nName: 865a6d73-ab7d-4176-a542-09898fbf7dca, dtype: object"
+     },
+     "metadata": {},
+     "execution_count": 88
+    }
+   ],
+   "source": [
+    "import json\n",
+    "with open('data/raw_data.json', 'r', encoding='utf-8') as f:\n",
+    "    data = json.load(f)\n",
+    "processed_data = []\n",
+    "df = pd.DataFrame(data['data'])\n",
+    "df = df.set_index('Id')\n",
+    "# df.head()\n",
+    "df.iloc[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "25.140639"
+     },
+     "metadata": {},
+     "execution_count": 94
+    }
+   ],
+   "source": [
+    "# Change columns order for better view\n",
+    "cols = df.columns.tolist()\n",
+    "cols = [\n",
+    "'LocName',\n",
+    "'Address',\n",
+    "'District',\n",
+    "'City',\n",
+    "'ZipCode',\n",
+    "'Latitude',\n",
+    "'Longitude',\n",
+    "'State',\n",
+    "'AvailableTime',\n",
+    "'AvailableTimeByte']\n",
+    "df = df[cols]\n",
+    "df.head()\n",
+    "# index方法\n",
+    "df.loc['45FC384A-CA7D-43B3-98A7-8A5B635331F5'.lower()]['Latitude']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 100,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "                                                                                LocName  \\\n",
-      "Id                                                                                        \n",
-      "865a6d73-ab7d-4176-a542-09898fbf7dca  { List : [{ Value :  Gogoro Huwei Guangfu RS C...   \n",
-      "cc480eeb-93c4-49b1-9b12-15474249b5bf  { List : [{ Value :  Pxmart YL Douliu Store , ...   \n",
-      "5a72a2fb-505c-476b-a796-17fcf769c99a  { List : [{ Value :  7-ELEVEN Zhu Danwan Store...   \n",
-      "41c44a19-d494-4845-a659-19d5cba5b29a  { List : [{ Value :  CPC Tuku GS , Lang :  en-...   \n",
-      "5dfa7fd8-2148-4fb2-b3b3-2d98949c0227  { List : [{ Value :  Pxmart HW Zhongzhen Store...   \n",
-      "...                                                                                 ...   \n",
-      "b40c5eb7-7606-4b93-87ca-02fe58da5838  { List :[{ Value : Familymart Yongkang Zhongxi...   \n",
-      "f3a88903-7cc3-482c-856f-02a23ca5b87b  { List :[{ Value : Fuqianting 18 Parking Store...   \n",
-      "16a11557-2db4-4fb9-a6d0-06bde48315fd  { List :[{ Value : CPC Zhonghualudong GS , Lan...   \n",
-      "b9540af6-960a-4ace-9897-0418f752dced  { List :[{ Value : Guanmiao District Store , L...   \n",
-      "b407e167-2fa1-4a42-8aa2-040677b460bf  { List :[{ Value : 7-ELEVEN Xinqian Store , La...   \n",
-      "\n",
-      "                                       Latitude   Longitude ZipCode  \\\n",
-      "Id                                                                    \n",
-      "865a6d73-ab7d-4176-a542-09898fbf7dca  23.711194  120.433871   63244   \n",
-      "cc480eeb-93c4-49b1-9b12-15474249b5bf  23.703846  120.550589   64043   \n",
-      "5a72a2fb-505c-476b-a796-17fcf769c99a  23.715782  120.530489   64049   \n",
-      "41c44a19-d494-4845-a659-19d5cba5b29a  23.678779  120.393428   63345   \n",
-      "5dfa7fd8-2148-4fb2-b3b3-2d98949c0227  23.707607  120.431245   63246   \n",
-      "...                                         ...         ...     ...   \n",
-      "b40c5eb7-7606-4b93-87ca-02fe58da5838  23.003924  120.239968   71074   \n",
-      "f3a88903-7cc3-482c-856f-02a23ca5b87b  22.992178  120.189030   70046   \n",
-      "16a11557-2db4-4fb9-a6d0-06bde48315fd  22.977093  120.226121   70168   \n",
-      "b9540af6-960a-4ace-9897-0418f752dced  22.963004  120.327447   71846   \n",
-      "b407e167-2fa1-4a42-8aa2-040677b460bf  23.082247  120.299482   74445   \n",
-      "\n",
-      "                                                                                Address  \\\n",
-      "Id                                                                                        \n",
-      "865a6d73-ab7d-4176-a542-09898fbf7dca  { List : [{ Value :  No. 478, Guangfu Rd., Huw...   \n",
-      "cc480eeb-93c4-49b1-9b12-15474249b5bf  { List : [{ Value :  No. 43, Zhuangjing Rd., D...   \n",
-      "5a72a2fb-505c-476b-a796-17fcf769c99a  { List : [{ Value :  No. 362, Xiping Rd., Doul...   \n",
-      "41c44a19-d494-4845-a659-19d5cba5b29a  { List : [{ Value :  No.131, Jianguo Rd., Tuku...   \n",
-      "5dfa7fd8-2148-4fb2-b3b3-2d98949c0227  { List : [{ Value :  No.23, Sec. 2, Linsen Rd....   \n",
-      "...                                                                                 ...   \n",
-      "b40c5eb7-7606-4b93-87ca-02fe58da5838  { List :[{ Value : No. 78?80, Zhongxiao Rd., Y...   \n",
-      "f3a88903-7cc3-482c-856f-02a23ca5b87b  { List :[{ Value : Sec. 1, Fuqian Rd., West Ce...   \n",
-      "16a11557-2db4-4fb9-a6d0-06bde48315fd  { List :[{ Value : No. 171, Sec. 3, Zhonghua E...   \n",
-      "b9540af6-960a-4ace-9897-0418f752dced  { List :[{ Value : No.998, Zhongzheng Rd., Gua...   \n",
-      "b407e167-2fa1-4a42-8aa2-040677b460bf  { List :[{ Value : No. 118, Minzu Rd., Gangqia...   \n",
-      "\n",
-      "                                                                               District  \\\n",
-      "Id                                                                                        \n",
-      "865a6d73-ab7d-4176-a542-09898fbf7dca  { List : [{ Value :  Huwei Township , Lang :  ...   \n",
-      "cc480eeb-93c4-49b1-9b12-15474249b5bf  { List : [{ Value :  Douliu City , Lang :  en-...   \n",
-      "5a72a2fb-505c-476b-a796-17fcf769c99a  { List : [{ Value :  Douliu City , Lang :  en-...   \n",
-      "41c44a19-d494-4845-a659-19d5cba5b29a  { List : [{ Value :  Tuku Township , Lang :  e...   \n",
-      "5dfa7fd8-2148-4fb2-b3b3-2d98949c0227  { List : [{ Value :  Huwei Township , Lang :  ...   \n",
-      "...                                                                                 ...   \n",
-      "b40c5eb7-7606-4b93-87ca-02fe58da5838  { List :[{ Value : Yongkang Dist. , Lang : en-...   \n",
-      "f3a88903-7cc3-482c-856f-02a23ca5b87b  { List :[{ Value : West Central Dist. , Lang :...   \n",
-      "16a11557-2db4-4fb9-a6d0-06bde48315fd  { List :[{ Value : East Dist. , Lang : en-US }...   \n",
-      "b9540af6-960a-4ace-9897-0418f752dced  { List :[{ Value : Guanmiao Dist. , Lang : en-...   \n",
-      "b407e167-2fa1-4a42-8aa2-040677b460bf  { List :[{ Value : Xinshi Dist. , Lang : en-US...   \n",
-      "\n",
-      "                                      State  \\\n",
-      "Id                                            \n",
-      "865a6d73-ab7d-4176-a542-09898fbf7dca      1   \n",
-      "cc480eeb-93c4-49b1-9b12-15474249b5bf      1   \n",
-      "5a72a2fb-505c-476b-a796-17fcf769c99a      1   \n",
-      "41c44a19-d494-4845-a659-19d5cba5b29a      1   \n",
-      "5dfa7fd8-2148-4fb2-b3b3-2d98949c0227      1   \n",
-      "...                                     ...   \n",
-      "b40c5eb7-7606-4b93-87ca-02fe58da5838      1   \n",
-      "f3a88903-7cc3-482c-856f-02a23ca5b87b      1   \n",
-      "16a11557-2db4-4fb9-a6d0-06bde48315fd      1   \n",
-      "b9540af6-960a-4ace-9897-0418f752dced      1   \n",
-      "b407e167-2fa1-4a42-8aa2-040677b460bf      1   \n",
-      "\n",
-      "                                                                                   City  \\\n",
-      "Id                                                                                        \n",
-      "865a6d73-ab7d-4176-a542-09898fbf7dca  { List :[{ Value : Yunlin County , Lang : en-U...   \n",
-      "cc480eeb-93c4-49b1-9b12-15474249b5bf  { List :[{ Value : Yunlin County , Lang : en-U...   \n",
-      "5a72a2fb-505c-476b-a796-17fcf769c99a  { List :[{ Value : Yunlin County , Lang : en-U...   \n",
-      "41c44a19-d494-4845-a659-19d5cba5b29a  { List :[{ Value : Yunlin County , Lang : en-U...   \n",
-      "5dfa7fd8-2148-4fb2-b3b3-2d98949c0227  { List :[{ Value : Yunlin County , Lang : en-U...   \n",
-      "...                                                                                 ...   \n",
-      "b40c5eb7-7606-4b93-87ca-02fe58da5838  { List :[{ Value : Tainan City , Lang : en-US ...   \n",
-      "f3a88903-7cc3-482c-856f-02a23ca5b87b  { List :[{ Value : Tainan City , Lang : en-US ...   \n",
-      "16a11557-2db4-4fb9-a6d0-06bde48315fd  { List :[{ Value : Tainan City , Lang : en-US ...   \n",
-      "b9540af6-960a-4ace-9897-0418f752dced  { List :[{ Value : Tainan City , Lang : en-US ...   \n",
-      "b407e167-2fa1-4a42-8aa2-040677b460bf  { List :[{ Value : Tainan City , Lang : en-US ...   \n",
-      "\n",
-      "                                     AvailableTime AvailableTimeByte  \n",
-      "Id                                                                    \n",
-      "865a6d73-ab7d-4176-a542-09898fbf7dca          24HR              None  \n",
-      "cc480eeb-93c4-49b1-9b12-15474249b5bf          24HR              None  \n",
-      "5a72a2fb-505c-476b-a796-17fcf769c99a          24HR              None  \n",
-      "41c44a19-d494-4845-a659-19d5cba5b29a          24HR              None  \n",
-      "5dfa7fd8-2148-4fb2-b3b3-2d98949c0227          24HR              None  \n",
-      "...                                            ...               ...  \n",
-      "b40c5eb7-7606-4b93-87ca-02fe58da5838          24HR              None  \n",
-      "f3a88903-7cc3-482c-856f-02a23ca5b87b          24HR              None  \n",
-      "16a11557-2db4-4fb9-a6d0-06bde48315fd          24HR              None  \n",
-      "b9540af6-960a-4ace-9897-0418f752dced          24HR              None  \n",
-      "b407e167-2fa1-4a42-8aa2-040677b460bf          24HR              None  \n",
-      "\n",
-      "[2255 rows x 10 columns]\n"
-     ]
+     "name": "stdout",
+     "text": "ll_distance:  1.4162488132709516 km\ngmap_distance: 4.9 km\n"
     }
    ],
    "source": [
-    "import json\n",
-    "import pandas as pd\n",
-    "with open('./new_data.json', 'r') as f:\n",
-    "    data_json = json.load(f)\n",
-    "#remove unused element [result, message, error_code]\n",
-    "data_json.pop('result')\n",
-    "data_json.pop('message')\n",
-    "data_json.pop('error_code')\n",
-    "# for element in data_json[\"data\"]:\n",
-    "#     print(element)\n",
-    "with open('final_data.json', 'w') as outfile:\n",
-    "    json.dump(data_json, outfile)\n",
-    "df = pd.DataFrame(list(data_json['data']))\n",
-    "df = df.set_index('Id')\n",
-    "print(df)\n"
+    "# Comparing distance calculate method \n",
+    "import geopy.distance\n",
+    "import googlemaps\n",
+    "import requests\n",
+    "\n",
+    "# find two sample stations -> LocName=['HiLife 八里聖心店站', '新北市民生立體停車場站']\n",
+    "sample_station = ['45FC384A-CA7D-43B3-98A7-8A5B635331F5','C9B55157-153A-4C07-91D5-A3C9131F110D']\n",
+    "sample_station = [i.lower() for i in sample_station]\n",
+    "# ss_index = [df[df['Id'].str.contains(sample_station[0])].index,df[df['Id'].str.contains(sample_station[1])].index]\n",
+    "\n",
+    "\n",
+    "# Method 1: Lat Long calculate\n",
+    "coord_0 = (df.loc[sample_station[0]]['Latitude'],df.loc[sample_station[0]]['Longitude'])\n",
+    "coord_1 = (df.loc[sample_station[1]]['Latitude'],df.loc[sample_station[1]]['Longitude'])\n",
+    "ll_distance = geopy.distance.distance(coord_0,coord_1).km\n",
+    "print('ll_distance: ', ll_distance, 'km')\n",
+    "\n",
+    "# Method 2: Google distance matrix \n",
+    "f = open('confidential/gmap_api_key.txt',encoding=\"utf-8\")\n",
+    "gmaps_key = f.readline() \n",
+    "url = 'https://maps.googleapis.com/maps/api/distancematrix/json?'\n",
+    "url += 'origins='+str(coord_0[0])+','+str(coord_0[1])\n",
+    "url += '&destinations='+str(coord_1[0])+','+str(coord_1[1])\n",
+    "url += '&mode=driving'\n",
+    "url += '&avoid=tolls|highways|ferries'\n",
+    "url += '&key='+gmaps_key\n",
+    "url\n",
+    "resp = requests.get(url)\n",
+    "print('gmap_distance:',resp.json()['rows'][0]['elements'][0]['distance']['text'])\n",
+    "\n",
+    "# gmaps api沒辦法支持多avoid\n",
+    "# gmaps = googlemaps.Client(key=gmaps_key)\n",
+    "# gmaps.distance_matrix(origins=str(coord_0[0])+','+str(coord_0[1]),destinations=str(coord_1[0])+','+str(coord_1[1]), mode='driving', avoid='tolls|highways')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Construct adjacent graph for stations\n",
+    "df_graph =  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -197,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3-final"
   }
  },
  "nbformat": 4,
